// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageHero > renders with as correctly 1`] = `
"<section data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24"></div>
</section>"
`;

exports[`PageHero > renders with body slot correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
    <div class="text-center">
      <!--v-if-->
      <div class="mt-10">Body slot</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with bottom slot correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24"></div>Bottom slot
</div>"
`;

exports[`PageHero > renders with class correctly 1`] = `
"<div data-orientation="vertical" class="isolate absolute">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24"></div>
</div>"
`;

exports[`PageHero > renders with default slot correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
    <!--v-if-->Default slot
  </div>
</div>"
`;

exports[`PageHero > renders with description correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
    <div class="text-center">
      <div class="">
        <!--v-if-->
        <!--v-if-->
        <div class="text-lg sm:text-xl/8 text-muted text-balance">Description</div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
    <div class="text-center">
      <div class="">
        <!--v-if-->
        <!--v-if-->
        <div class="text-lg sm:text-xl/8 text-muted text-balance">Description slot</div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with footer slot correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
    <div class="text-center">
      <!--v-if-->
      <!--v-if-->
      <div class="mt-10">Footer slot</div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with header slot correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
    <div class="text-center">
      <div class="">Header slot</div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with headline slot correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
    <div class="text-center">
      <div class="">
        <div class="mb-4 justify-center">Headline slot</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with links correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
    <div class="text-center">
      <!--v-if-->
      <!--v-if-->
      <div class="mt-10">
        <div class="flex flex-wrap gap-x-6 gap-y-3 justify-center"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-base gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
            <!--v-if--><span class="truncate">Get started</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with links slot correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
    <div class="text-center">
      <!--v-if-->
      <!--v-if-->
      <div class="mt-10">
        <div class="flex flex-wrap gap-x-6 gap-y-3 justify-center">Links slot</div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24 lg:grid-cols-2 lg:items-center">
    <!--v-if-->
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`PageHero > renders with orientation horizontal links correctly 1`] = `
"<div data-orientation="horizontal" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24 lg:grid-cols-2 lg:items-center">
    <div class="">
      <!--v-if-->
      <!--v-if-->
      <div class="mt-10">
        <div class="flex flex-wrap gap-x-6 gap-y-3"><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-3 py-2 text-base gap-2 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
            <!--v-if--><span class="truncate">Get started</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`PageHero > renders with orientation horizontal reverse correctly 1`] = `
"<div data-orientation="horizontal" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24 lg:grid-cols-2 lg:items-center">
    <!--v-if-->
    <div class="hidden lg:block"></div>
  </div>
</div>"
`;

exports[`PageHero > renders with reverse correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24"></div>
</div>"
`;

exports[`PageHero > renders with title correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
    <div class="text-center">
      <div class="">
        <!--v-if-->
        <h1 class="text-5xl sm:text-7xl text-pretty tracking-tight font-bold text-highlighted">Title</h1>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24">
    <div class="text-center">
      <div class="">
        <!--v-if-->
        <h1 class="text-5xl sm:text-7xl text-pretty tracking-tight font-bold text-highlighted">Title slot</h1>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`PageHero > renders with top slot correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">Top slot<div class="w-full max-w-(--ui-container) mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24"></div>
</div>"
`;

exports[`PageHero > renders with ui correctly 1`] = `
"<div data-orientation="vertical" class="relative isolate">
  <div class="w-full mx-auto px-4 sm:px-6 lg:px-8 flex flex-col lg:grid py-24 sm:py-32 lg:py-40 gap-16 sm:gap-y-24 max-w-5xl"></div>
</div>"
`;
